tests/behavior/success/range_unbounded.bz
function main()
{
	let _ = __builtin_range_unbounded();
}
