tests/behavior/error/int_divide_by_zero_u8.bz
function main()
{
	let a = 1u8;
	let b = 0u8;
	let _ = a / b;
}
